Started reworking files and directories into Flask format

--- a/templates/heisenberg.html
+++ b/templates/heisenberg.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
   
-  <link rel="stylesheet" type="text/css" href="./styles/weblinks.css">
-  <link rel="stylesheet" type="text/css" href="./styles/slideshows.css">
+  <link rel="stylesheet" type="text/css" href="../styles/weblinks.css">
+  <link rel="stylesheet" type="text/css" href="../styles/slideshows.css">
 </head>
 
 
@@ -40,7 +40,7 @@
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Background</h3>
     <div class="w3-container">
       <div class="w3-container w3-border w3-border-light-grey w3-padding-16" style="float:right">
-        <img src="./images/heisenberg/comm_growth.gif" alt="comm_growth" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
+        <img src="../static/images/heisenberg/comm_growth.gif" alt="comm_growth" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
         <br><div style="text-align:center">Progressive dilations of \( P_n(S) \) in \( (\mathbb{Z}^3,+) \)</div>
       </div>
       <p>
@@ -155,27 +155,27 @@
     </p>
     <div class="w3-content w3-display-container", style="max-width:512px; max-height:512px">
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra_growth.gif" alt="tetra_growth" style="max-width:512px; max-height:512px">
+        <img src="../static/images/heisenberg/tetra_growth.gif" alt="tetra_growth" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Progressive dilations of \( P_n(S) \) in \( (\mathbb{Z}^3, \star) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra2.gif" alt="tetra2" style="max-width:512px; max-height:512px">
+        <img src="../static/images/heisenberg/tetra2.gif" alt="tetra2" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_2(S) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra4.gif" alt="tetra4" style="max-width:512px; max-height:512px">
+        <img src="../static/images/heisenberg/tetra4.gif" alt="tetra4" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_4(S) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra6.gif" alt="tetra6" style="max-width:512px; max-height:512px">
+        <img src="../static/images/heisenberg/tetra6.gif" alt="tetra6" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_6(S) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra8.gif" alt="tetra8" style="max-width:512px; max-height:512px">
+        <img src="../static/images/heisenberg/tetra8.gif" alt="tetra8" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_8(S) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra10.gif" alt="tetra10" style="max-width:512px; max-height:512px">
+        <img src="../static/images/heisenberg/tetra10.gif" alt="tetra10" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_{10}(S) \)</div>
       </div>
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -217,7 +217,7 @@
 </footer>
 
 
-<script src="./scripts/slideshows.js"></script>
+<script src="../scripts/slideshows.js"></script>
 
 
 </html>
