--- a/templates/minecraft.html
+++ b/templates/minecraft.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
   
-  <link rel="stylesheet" type="text/css" href="./styles/weblinks.css">
-  <link rel="stylesheet" type="text/css" href="./styles/slideshows.css">
+  <link rel="stylesheet" type="text/css" href="../styles/weblinks.css">
+  <link rel="stylesheet" type="text/css" href="../styles/slideshows.css">
 </head>
 
 
@@ -49,31 +49,31 @@
 
     <div class="w3-content w3-display-container" style="max-width:75%; max-height:75%">
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/world by height.png" alt="world by height" style="max-width:100%; max-height:100%">
+        <img src="../static/images/minecraft/world by height.png" alt="world by height" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A region of a world (colored by height)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/world by block.png" alt="world by block" style="max-width:100%; max-height:100%">
+        <img src="../static/images/minecraft/world by block.png" alt="world by block" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A region of a world (colored by block ID)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/village.png" alt="village" style="max-width:100%; max-height:100%">
+        <img src="../static/images/minecraft/village.png" alt="village" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A village (colored by block ID)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/mountain overlook.png" alt="mountain overlook" style="max-width:100%; max-height:100%">
+        <img src="../static/images/minecraft/mountain overlook.png" alt="mountain overlook" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">View from a mountain (colored by height)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/caves.png" alt="caves" style="max-width:100%; max-height:100%">
+        <img src="../static/images/minecraft/caves.png" alt="caves" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Underground cave systems (colored by height)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/cave closeup.png" alt="cave closeup" style="max-width:100%; max-height:100%">
+        <img src="../static/images/minecraft/cave closeup.png" alt="cave closeup" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Closeup of a cave (colored by height)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/cave ravine.png" alt="cave ravine" style="max-width:100%; max-height:100%">
+        <img src="../static/images/minecraft/cave ravine.png" alt="cave ravine" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Closeup of ravine (colored by height)</div>
       </div>
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -108,7 +108,7 @@
 </footer>
 
 
-<script src="./scripts/slideshows.js"></script>
+<script src="../scripts/slideshows.js"></script>
 
 
 </body>
