--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
   
-  <link rel="stylesheet" type="text/css" href="./styles/weblinks.css">
-  <link rel="stylesheet" type="text/css" href="./styles/slideshows.css">
-  <link rel="stylesheet" type="text/css" href="./styles/fixed_lists.css">
+  <link rel="stylesheet" type="text/css" href="../styles/weblinks.css">
+  <link rel="stylesheet" type="text/css" href="../styles/slideshows.css">
+  <link rel="stylesheet" type="text/css" href="../styles/fixed_lists.css">
 </head>
 
 
@@ -63,7 +63,7 @@
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Algorithm</h3>
     <div class="w3-container">
       <div class="w3-container w3-border w3-border-light-grey w3-padding-16" style="float:right">
-        <img src="./images/assignments/assignments.PNG" alt="graph" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
+        <img src="../static/images/assignments/assignments.PNG" alt="graph" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
         <br><div style="text-align:center"><i>Graph formulation of the Math Lab assignment problem.</i></div>
       </div>
 
@@ -98,7 +98,7 @@
 
       <div class="w3-container">
         <div class="w3-container w3-border w3-border-light-grey w3-padding-16" style="float:left">
-          <img src="./images/assignments/code.PNG" alt="code" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:left">
+          <img src="../static/images/assignments/code.PNG" alt="code" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:left">
           <br><div style="text-align:center"><i>The algorithm implemented in Python.</i></div>
         </div>
 
@@ -121,15 +121,15 @@
 
       <div class="w3-content w3-display-container", style="max-width:512px; max-height:512px">
         <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-          <img src="./images/assignments/step1.PNG" alt="step1" style="max-width:512px; max-height:512px">
+          <img src="../static/images/assignments/step1.PNG" alt="step1" style="max-width:512px; max-height:512px">
           <br><div style="text-align:center"><i>Determine compatible student times and group times.</i></div>
         </div>
         <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-          <img src="./images/assignments/step2.PNG" alt="step2" style="max-width:512px; max-height:512px">
+          <img src="../static/images/assignments/step2.PNG" alt="step2" style="max-width:512px; max-height:512px">
           <br><div style="text-align:center"><i>Select a time for each group.</i></div>
         </div>
         <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-          <img src="./images/assignments/step3.PNG" alt="step3" style="max-width:512px; max-height:512px">
+          <img src="../static/images/assignments/step3.PNG" alt="step3" style="max-width:512px; max-height:512px">
           <br><div style="text-align:center"><i>Select a subset of students for each group time.</i></div>
         </div>
         <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -149,7 +149,7 @@
 </footer>
 
 
-<script src="./scripts/slideshows.js"></script>
+<script src="../scripts/slideshows.js"></script>
 
 
 </body>
