--- a/templates/resampling.html
+++ b/templates/resampling.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
   
-  <link rel="stylesheet" type="text/css" href="./styles/weblinks.css">
-  <link rel="stylesheet" type="text/css" href="./styles/slideshows.css">
+  <link rel="stylesheet" type="text/css" href="../styles/weblinks.css">
+  <link rel="stylesheet" type="text/css" href="../styles/slideshows.css">
 </head>
 
 
@@ -39,15 +39,15 @@
 
     <div class="w3-content w3-display-container", style="max-width:512px; max-height:512px">
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/resampling/plane.gif" alt="plane" style="max-width:512px; max-height:512px">
+        <img src="../static/images/resampling/plane.gif" alt="plane" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container" style="text-align:center">A plane from <a class="weblink" href="https://modelnet.cs.princeton.edu/">ModelNet</a>.</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/resampling/person.gif" alt="person" style="max-width:512px; max-height:512px">
+        <img src="../static/images/resampling/person.gif" alt="person" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container" style="text-align:center">A person from <a class="weblink" href="https://modelnet.cs.princeton.edu/">ModelNet</a>.</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/resampling/plant.gif" alt="plant" style="max-width:512px; max-height:512px">
+        <img src="../static/images/resampling/plant.gif" alt="plant" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container" style="text-align:center">A plant from <a class="weblink" href="https://modelnet.cs.princeton.edu/">ModelNet</a>.</div>
       </div>
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -102,7 +102,7 @@
 </footer>
 
 
-<script src="./scripts/slideshows.js"></script>
+<script src="../scripts/slideshows.js"></script>
 
 
 </body>
