--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
   
-  <link rel="stylesheet" type="text/css" href="./styles/weblinks.css">
-  <link rel="stylesheet" type="text/css" href="./styles/slideshows.css">
+  <link rel="stylesheet" type="text/css" href="../styles/weblinks.css">
+  <link rel="stylesheet" type="text/css" href="../styles/slideshows.css">
 </head>
 
 
@@ -37,9 +37,9 @@
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
     <div class="w3-content w3-display-container" style="max-width:300px">
-      <img class="slideshow1" src="./images/visualizations/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
-      <img class="slideshow1" src="./images/visualizations/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
-      <img class="slideshow1" src="./images/visualizations/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
+      <img class="slideshow1" src="../static/images/visualizations/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
+      <img class="slideshow1" src="../static/images/visualizations/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
+      <img class="slideshow1" src="../static/images/visualizations/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
       <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 0)">&#10095;</button>
     </div>
@@ -57,10 +57,10 @@
   <div class="w3-container w3-padding-32" id="Calculus III">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Calculus III</h3>
     <div class="w3-content w3-display-container" style="max-width:270px">
-      <img class="slideshow2" src="./images/visualizations/saddle1.jpg" alt="saddle 1" style="max-width:270px">
-      <img class="slideshow2" src="./images/visualizations/saddle2.jpg" alt="saddle 2" style="max-width:270px">
-      <img class="slideshow2" src="./images/visualizations/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
-      <img class="slideshow2" src="./images/visualizations/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
+      <img class="slideshow2" src="../static/images/visualizations/saddle1.jpg" alt="saddle 1" style="max-width:270px">
+      <img class="slideshow2" src="../static/images/visualizations/saddle2.jpg" alt="saddle 2" style="max-width:270px">
+      <img class="slideshow2" src="../static/images/visualizations/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
+      <img class="slideshow2" src="../static/images/visualizations/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
       <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
     </div>
@@ -80,7 +80,7 @@
 </footer>
 
 
-<script src="./scripts/slideshows.js"></script>
+<script src="../scripts/slideshows.js"></script>
 
 
 </body>
