Added main image to main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,14 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
+  <!-- Main image-->
+  <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+    <img class="w3-image" src="../static/images/clebsh_render.png" alt="clebsh_render" width="1500" height="800">
+    <div class="w3-display-middle w3-margin-top w3-center">
+      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Sean Grate</b></span></h1>
+    </div>
+  </header>
+
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
