Fixed image slideshows displaying

--- a/templates/resampling.html
+++ b/templates/resampling.html
@@ -22,7 +22,7 @@
 <!--Top navigation bar-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="./index.html" class="w3-bar-item w3-button"><b>Go back</b></a>
+    <a href={{ url_for("index") }} class="w3-bar-item w3-button"><b>Go back</b></a>
 
     <div class="w3-right w3-hide-small">
       <a href="#Background" class="w3-bar-item w3-button">Background</a>
@@ -102,7 +102,7 @@
 </footer>
 
 
-<script src="../scripts/slideshows.js"></script>
+<script src="../static/scripts/slideshows.js"></script>
 
 
 </body>
