Fixed style issues

--- a/templates/flightroute.html
+++ b/templates/flightroute.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
 
-  <link rel="stylesheet" type="text/css" href="../styles/weblinks.css">
-  <link rel="stylesheet" type="text/css" href="../styles/slideshows.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/weblinks.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/slideshows.css">
 </head>
 
 
