--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
   
-  <link rel="stylesheet" type="text/css" href="../styles/weblinks.css">
-  <link rel="stylesheet" type="text/css" href="../styles/slideshows.css">
-  <link rel="stylesheet" type="text/css" href="../styles/fixed_lists.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/weblinks.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/slideshows.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/fixed_lists.css">
 </head>
 
 
