--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>Sean Grate</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "base.html" %}
+{% block title %}{{ title }}{% endblock %}
 
-<head>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
-  
-  <link rel="stylesheet" type="text/css" href="../static/styles/weblinks.css">
-</head>
-
-
+{% block body %}
 <body>
-
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Sean</b> Grate</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#research" class="w3-bar-item w3-button">Research</a>
-      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-    </div>
-  </div>
-</div>
-
 
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
@@ -71,7 +48,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
           <div class="w3-display-topleft w3-black">
-            <a class="w3-button w3-black" href={{ url_for("heisenberg") }}>Discrete Heisenberg Group</a>
+            <a class="w3-button w3-black" href="{{ url_for('heisenberg') }}">Discrete Heisenberg Group</a>
           </div>
         <img src="../static/images/heisenberg/tetra_growth.gif" alt="heisenberg" style="width:100%">
       </div>
@@ -79,7 +56,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href={{ url_for("flightroute") }}>Flight Route Estimation</a>
+          <a class="w3-button w3-black" href="{{ url_for('flightroute') }}">Flight Route Estimation</a>
         </div>
         <img src="../static/images/flightroute/franklin_torch_flight.gif" alt="flight route" style="width:100%">
       </div>
@@ -95,7 +72,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href={{ url_for("visualizations") }}>Visualizing Algebraic Surfaces</a>
+          <a class="w3-button w3-black" href="{{ url_for('visualizations') }}">Visualizing Algebraic Surfaces</a>
         </div>
         <img src="../static/images/visualizations/clebsh1.jpg" alt="Clebsh 27 lines" style="width:100%" image-orientation=from-image>
       </div>
@@ -103,7 +80,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href={{ url_for("assignments") }}>TA Assignments</a>
+          <a class="w3-button w3-black" href="{{ url_for('assignments') }}">TA Assignments</a>
         </div>
         <img src="../static/images/assignments/assignments.PNG" alt="assignments" style="width:100%">
       </div>
@@ -111,7 +88,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href={{ url_for("minecraft") }}>Generating Minecraft Worlds</a>
+          <a class="w3-button w3-black" href="{{ url_for('minecraft') }}">Generating Minecraft Worlds</a>
         </div>
         <img src="../static/images/minecraft/mountain overlook (small).png" alt="minecraft world" style="width:100%">
       </div>
@@ -119,14 +96,14 @@
   </div>
 </div>
 
-
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
   <!-- <p>Template borrowed from <a class="weblink" href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p> -->
 </footer>
 
-
 </body>
+{% endblock %}
+
 
 
 </html>
