Started stub for Twisted Cubic and removed some redundant nav bar HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,14 @@
 
   <!-- Main image-->
   <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-    <img class="w3-image" src="../static/images/clebsh_render.png" alt="clebsh_render" width="1500" height="800">
+    <img class="w3-image" src="../static/images/visualizations/clebsh_render.png" alt="clebsh_render" width="1500" height="800">
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Sean Grate</b></span></h1>
     </div>
   </header>
 
   <!-- About Section -->
-  <div class="w3-container w3-padding-32" id="about">
+  <div class="w3-container w3-padding-32" id="About">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
     <img class="w3-image" src="../static/images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px; float:left">
     <p>I am a recent graduate of the University of Kentucky where I earned a Bachelor of Science in Mathematics with minors in History and Classics.
@@ -32,7 +32,7 @@
   </div>
 
   <!-- Research Section -->
-  <div class="w3-container w3-padding-32" id="research">
+  <div class="w3-container w3-padding-32" id="Research">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Research</h3>
   </div>
 
@@ -64,7 +64,7 @@
   </div>
 
   <!-- Research Section -->
-  <div class="w3-container w3-padding-32" id="projects">
+  <div class="w3-container w3-padding-32" id="Projects">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Projects</h3>
   </div>
 
