--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -6,25 +6,12 @@
 {% block body %}
 <body>
 
-
-<!--Top navigation bar-->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="{{ url_for('index') }}" class="w3-bar-item w3-button"><b>Go back</b></a>
-
-    <div class="w3-right w3-hide-small">
-      <a href="#27 Lines" class="w3-bar-item w3-button">27 Lines</a>
-      <a href="#Calculus III" class="w3-bar-item w3-button">Calculus III</a>
-    </div>
-  </div>
-</div>
-
-
 <!--Main body-->
 <div class="w3-content w3-padding" style="max-width:1564px">
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
     <div class="w3-content w3-display-container" style="max-width:300px">
+      <img class="slideshow1" src="../static/images/visualizations/clebsh_render.png" alt="clebsh render" style="max-width:300px">
       <img class="slideshow1" src="../static/images/visualizations/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
       <img class="slideshow1" src="../static/images/visualizations/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
       <img class="slideshow1" src="../static/images/visualizations/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
@@ -42,15 +29,28 @@
     </p>
   </div>
 
+  <div class="w3-container w3-padding-32" id="Twisted Cubic">
+    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">The Twisted Cubic</h3>
+    <div class="w3-content w3-display-container" style="max-width:300px">
+      <img class="slideshow2" src="../static/images/visualizations/twisted_cubic_surface_render.png" alt="twisted cubic render" style="max-width:300px">
+      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
+      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
+    </div>
+    <p>The <a class="weblink" href="https://en.wikipedia.org/wiki/Twisted_cubic">twisted cubic</a> can be expressed
+       parametrically with \( t \rightarrow (t, t^2, t^3) \). If considering this curve in \( \mathbb{R}^3 \), then in particular, 
+       projecting the twisted cubic along any dimension yields a different polynomial curve.
+    </p>
+  </div>
+
   <div class="w3-container w3-padding-32" id="Calculus III">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Calculus III</h3>
     <div class="w3-content w3-display-container" style="max-width:270px">
-      <img class="slideshow2" src="../static/images/visualizations/saddle1.jpg" alt="saddle 1" style="max-width:270px">
-      <img class="slideshow2" src="../static/images/visualizations/saddle2.jpg" alt="saddle 2" style="max-width:270px">
-      <img class="slideshow2" src="../static/images/visualizations/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
-      <img class="slideshow2" src="../static/images/visualizations/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
-      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
-      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
+      <img class="slideshow3" src="../static/images/visualizations/saddle1.jpg" alt="saddle 1" style="max-width:270px">
+      <img class="slideshow3" src="../static/images/visualizations/saddle2.jpg" alt="saddle 2" style="max-width:270px">
+      <img class="slideshow3" src="../static/images/visualizations/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
+      <img class="slideshow3" src="../static/images/visualizations/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
+      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 2)">&#10094;</button>
+      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 2)">&#10095;</button>
     </div>
     <p>For many students, the higher dimensionality of multivariate calculus can be a challenge to handle.
         By creating interactive and tangible objects related to some of the objects, the goal is to make the
