Added Plotly support and twisted cubic plot to visualizations page

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
         <div class="w3-display-topleft w3-black">
           <a class="w3-button w3-black" href="{{ url_for('visualizations') }}">Visualizing Algebraic Surfaces</a>
         </div>
-        <img src="../static/images/visualizations/clebsh1.jpg" alt="Clebsh 27 lines" style="width:100%" image-orientation=from-image>
+        <img src="../static/images/visualizations/twisted_cubic_surface_render.png" alt="Twisted cubic" style="width:100%" image-orientation=from-image>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
