--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,12 @@
 	<title>{% block title %}{% endblock %}</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-	
+
 	<head>
+		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+	
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
 		
@@ -35,5 +36,6 @@
 		</div>
 
 		{% block body %}{% endblock %}
+		<script src="../static/scripts/slideshows.js"></script>
 	</body>
 </html>
