--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -40,6 +40,9 @@
        parametrically with \( t \rightarrow (t, t^2, t^3) \). If considering this curve in \( \mathbb{R}^3 \), then in particular, 
        projecting the twisted cubic along any dimension yields a different polynomial curve.
     </p>
+
+    <div id="twisted_cubic_plot"></div>
+    <script src="../static/scripts/twisted_cubic.js"></script>
   </div>
 
   <div class="w3-container w3-padding-32" id="Calculus III">
@@ -66,10 +69,6 @@
 <footer class="w3-center w3-black w3-padding-16">
   <p>Code can be found <a class="weblink" href="https://github.com/UKYMathLab/3dprinting">here</a>.</p>
 </footer>
-
-
-<script src="../static/scripts/slideshows.js"></script>
-
 
 </body>
 {% endblock %}
