Added some code for the Clebsh surface and made slight changes to twisted cubic

--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -27,6 +27,8 @@
       of test prints, we finally got a fantastic model to hold and display. Photos are courtesy of Nathan Fieldsteel and
       <a class="weblink" href="http://www.ms.uky.edu/~dhje223/">Dave Jensen</a>.
     </p>
+    <div id="clebsh_plot"></div>
+    <script src="../static/scripts/clebsh.js"></script>
   </div>
 
   <div class="w3-container w3-padding-32" id="Twisted Cubic">
@@ -40,7 +42,6 @@
        parametrically with \( t \rightarrow (t, t^2, t^3) \). If considering this curve in \( \mathbb{R}^3 \), then in particular, 
        projecting the twisted cubic along any dimension yields a different polynomial curve.
     </p>
-
     <div id="twisted_cubic_plot"></div>
     <script src="../static/scripts/twisted_cubic.js"></script>
   </div>
