--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,7 @@
 
   <!-- Main image-->
   <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-<<<<<<< HEAD:templates/index.html
     <img class="w3-image" src="../static/images/visualizations/clebsh_render.png" alt="clebsh_render" width="1500" height="800">
-=======
-    <img class="w3-image" src="./images/clebsh_render.png" alt="clebsh_render" width="1500" height="800">
->>>>>>> master:index.html
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Sean Grate</b></span></h1>
     </div>
@@ -29,8 +25,8 @@
        My primary research interests seem to lie in complex analysis, geometry, and machine learning. 
        While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
        and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
-       Beginning in Fall 2020, I will be a graduate student in Auburn University's Mathematics and Statistics Department.
-       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
+       I am now a graduate student in Auburn University's Mathematics and Statistics Department.
+       A copy of my CV can be found <a class="weblink" href="../misc/CV.pdf">here</a> along with my contact information. 
        Photo is courtesy of Nathan Jacobs.
     </p>
   </div>
