Fixed CV pathing issue.

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
        While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
        and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
        I am now a graduate student in Auburn University's Mathematics and Statistics Department.
-       A copy of my CV can be found <a class="weblink" href="../misc/CV.pdf">here</a> along with my contact information. 
+       A copy of my CV can be found <a class="weblink" href="../static/misc/CV.pdf">here</a> along with my contact information. 
        Photo is courtesy of Nathan Jacobs.
     </p>
   </div>
