--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -10,14 +10,8 @@
 <div class="w3-content w3-padding" style="max-width:1564px">
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
-    <div class="w3-content w3-display-container" style="max-width:300px">
-      <img class="slideshow1" src="../static/images/visualizations/clebsh_render.png" alt="clebsh render" style="max-width:300px">
-      <img class="slideshow1" src="../static/images/visualizations/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
-      <img class="slideshow1" src="../static/images/visualizations/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
-      <img class="slideshow1" src="../static/images/visualizations/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
-      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
-      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 0)">&#10095;</button>
-    </div>
+    <div id="clebsh_plot"></div>
+    <script src="../static/scripts/clebsh.js"></script>
     <p>In algebraic geometry, there is a remarkable <a class="weblink" href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. In collaboration with postdoc
       <a class="weblink" href="https://nathanfieldsteel.github.io/">Nathan Fieldsteel</a>, we managed to 3D print the
@@ -27,41 +21,58 @@
       of test prints, we finally got a fantastic model to hold and display. Photos are courtesy of Nathan Fieldsteel and
       <a class="weblink" href="http://www.ms.uky.edu/~dhje223/">Dave Jensen</a>.
     </p>
-    <div id="clebsh_plot"></div>
-    <script src="../static/scripts/clebsh.js"></script>
+    <div class="w3-content w3-display-container" style="max-width:300px">
+      <img class="slideshow1" src="../static/images/visualizations/clebsh_render.png" alt="clebsh render" style="max-width:300px">
+      <img class="slideshow1" src="../static/images/visualizations/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
+      <img class="slideshow1" src="../static/images/visualizations/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
+      <img class="slideshow1" src="../static/images/visualizations/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
+      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
+      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 0)">&#10095;</button>
+    </div>
   </div>
 
   <div class="w3-container w3-padding-32" id="Twisted Cubic">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">The Twisted Cubic</h3>
-    <div class="w3-content w3-display-container" style="max-width:300px">
-      <img class="slideshow2" src="../static/images/visualizations/twisted_cubic_surface_render.png" alt="twisted cubic render" style="max-width:300px">
-      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
-      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
-    </div>
     <p>The <a class="weblink" href="https://en.wikipedia.org/wiki/Twisted_cubic">twisted cubic</a> can be expressed
        parametrically with \( t \rightarrow (t, t^2, t^3) \). If considering this curve in \( \mathbb{R}^3 \), then in particular, 
        projecting the twisted cubic along any dimension yields a different polynomial curve.
     </p>
     <div id="twisted_cubic_plot"></div>
     <script src="../static/scripts/twisted_cubic.js"></script>
+    <p>The tangent variety of the twisted cubic is the collection of lines that lie tangent to the twisted cubic.
+      The designer of this model, Nathan Fieldsteel, has a fantastic blog post <a class="weblink" href="https://nathanfieldsteel.github.io/2020/02/18/The-Tangent-Variety-to-the-Twisted-Cubic.html">here</a> 
+      that describes what this model is visualizing. We printed two versions of the tangent variety.
+      The first is more solid, whereas as the second is more skeletal and accentuates the tangent lines more.
+   </p>
+   <div class="w3-content w3-display-container" style="max-width:300px">
+      <img class="slideshow2" src="../static/images/visualizations/twisted_cubic_surface_render.png" alt="twisted cubic render" style="max-width:300px">
+      <img class="slideshow2" src="../static/images/visualizations/twisted_cubic1.JPG" alt="twisted cubic 1" style="max-width:300px">
+      <img class="slideshow2" src="../static/images/visualizations/twisted_cubic2.JPG" alt="twisted cubic 2" style="max-width:300px">
+      <img class="slideshow2" src="../static/images/visualizations/twisted_cubic3.JPG" alt="twisted cubic 3" style="max-width:300px">
+      <img class="slideshow2" src="../static/images/visualizations/tangent_variety1.JPG" alt="tangent variety 1" style="max-width:300px">
+      <img class="slideshow2" src="../static/images/visualizations/tangent_variety2.JPG" alt="tangent variety 2" style="max-width:300px">
+      <img class="slideshow2" src="../static/images/visualizations/tangent_variety3.JPG" alt="tangent variety 3" style="max-width:300px">
+      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 1)">&#10094;</button>
+      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 1)">&#10095;</button>
+    </div>
   </div>
 
   <div class="w3-container w3-padding-32" id="Calculus III">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Calculus III</h3>
-    <div class="w3-content w3-display-container" style="max-width:270px">
-      <img class="slideshow3" src="../static/images/visualizations/saddle1.jpg" alt="saddle 1" style="max-width:270px">
-      <img class="slideshow3" src="../static/images/visualizations/saddle2.jpg" alt="saddle 2" style="max-width:270px">
-      <img class="slideshow3" src="../static/images/visualizations/paraboloid1.jpg" alt="paraboloid 1" style="max-width:270px">
-      <img class="slideshow3" src="../static/images/visualizations/paraboloid2.jpg" alt="paraboloid 2" style="max-width:270px">
+    <p>For many students, the higher dimensionality of multivariate calculus can be a challenge to handle.
+      By creating interactive and tangible objects related to some of the objects, the goal is to make the
+      concepts more accessible and to provide some intuition for students. Because much of Calculus III begins
+      in \( \mathbb{R}^3 \), many of the surfaces can actually be 3D-printed. Photos are courtesy of
+      <a class="weblink" href="https://math.osu.edu/people/osborne.475">Christina Osborne</a>.
+    </p>
+    <div class="w3-content w3-display-container" style="max-width:300px">
+      <img class="slideshow3" src="../static/images/visualizations/saddle1.jpg" alt="saddle 1" style="max-width:300px">
+      <img class="slideshow3" src="../static/images/visualizations/saddle2.jpg" alt="saddle 2" style="max-width:300px">
+      <img class="slideshow3" src="../static/images/visualizations/paraboloid1.jpg" alt="paraboloid 1" style="max-width:300px">
+      <img class="slideshow3" src="../static/images/visualizations/paraboloid2.jpg" alt="paraboloid 2" style="max-width:300px">
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 2)">&#10094;</button>
       <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 2)">&#10095;</button>
     </div>
-    <p>For many students, the higher dimensionality of multivariate calculus can be a challenge to handle.
-        By creating interactive and tangible objects related to some of the objects, the goal is to make the
-        concepts more accessible and to provide some intuition for students. Because much of Calculus III begins
-        in \( \mathbb{R}^3 \), many of the surfaces can actually be 3D-printed. Photos are courtesy of
-        <a class="weblink" href="https://math.osu.edu/people/osborne.475">Christina Osborne</a>.
-    </p>
   </div>
 </div>
 
