More fixing of timeline

--- a/styles/timelines.css
+++ b/styles/timelines.css
@@ -3,11 +3,11 @@
     box-sizing: border-box;
   }
   
-  /* Set a background color */
+  /* Set a background color
   body {
-    background-color: #474e5d;
-    font-family: Helvetica, sans-serif;
-  }
+    background-color: lightgray;
+    font-family: Roboto;
+  } */
   
   /* The actual timeline (the vertical ruler) */
   .timeline {
