--- a/styles/misc.css
+++ b/styles/misc.css
@@ -1,3 +1,37 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 a.weblink:hover {opacity: 0.6}
+
+/* .masonry {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 15px;
+}
+
+.masonry-item {
+    break-inside: avoid;
+    overflow: hidden;
+}
+
+.masonry-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+} */
+
+.masonry {
+    column-count: 3;
+    column-gap: 15px;
+}
+
+.masonry-item {
+    display: inline-block;
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+.masonry-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
